--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "embla-carousel-react": "^8.6.0",
     "ky": "^1.14.0",
     "lucide-react": "^0.554.0",
-    "next": "16.0.4",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
